- Ensure a default value for Fav Device always shows in Fav/Scan tab (Graham)
- Add MAXQ610 code to OrtekMCE protocol (Dave Reed)
- Fix bug in Hex.parseHex( String ) when string is a hex value with a final 'h' indicator (Graham)
- Fix bug when loading FavScan with AdvCodeBindFormat=LONG and Fav Device = <none> (Graham)
-- Alpha 28
- Update digitmaps to 627 (Dave Reed)
- Update DecodeIR and DecodeIR.html to v2.45 (Dave Reed)
- On Mac OS X, ensure libraries are sought with extension .jnilib rather than .dylib (Graham)
- Amend build.xml to allow distribution zip file to include RDFs, Maps and Images (Graham)
- Add new menu item Options/Advanced/Use non-modal Device Editor (Graham)
- Pass working directory to RM when opening from RMIR, needed when RMIR opened by double-clicking .rmir file (Graham)
- Modify loading of hidapi library as temp files created by loader in hidapi-1.1.jar are never deleted (Graham)
- Modify PlainTextClipboardReader() to prevent it ignoring blank lines (Graham)
- Add a new static integer buildVer for display as part of version (Graham)
- Add file buildRef.txt which contains a build number that overrides buildVer if larger (Graham)
- Add confirmation dialog on uploads (Graham)
- Add confirmation dialog for all table deletes, with a menu option to suppress these messages (Graham)
- Add tooltip to cells on shaded rows in Key Moves table to explain why they are shaded (Graham)
- Make protocol editor opened from Device Upgrade Editor be centered on screen rather than on RMIR window (Graham)
- Add support for segment type 0x0E (Graham)
- Make tooltips on tables remain for 5 minutes or until cell (or sometimes tooltip) exited (Graham)
- Add space after each {pause} in Fav/Scan listing (Graham)
- Add keyboard or mouse alternatives for certain actions (Graham)
- Add support for segment type 0x0F (Graham)
- Fix issue with width of tooltips showing full text of truncated table cells (Graham)